// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:checkbox 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  Checkbox
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxControl cxd-Form-control"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    选项说明
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkbox with checked 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  Checkbox
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxControl cxd-Form-control"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full"
              data-role="checkbox"
            >
              <input
                checked=""
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    选项说明
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:checkbox with optionType 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  Checkbox
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-CheckboxControl cxd-Form-control"
          >
            <label
              class="cxd-Checkbox cxd-Checkbox--checkbox cxd-Checkbox--full cxd-Checkbox--button cxd-Checkbox--button--checked"
              data-role="checkbox"
            >
              <input
                type="checkbox"
              />
              <i />
              <span
                class=""
              >
                <span
                  class="cxd-TplField"
                >
                  <span>
                    去吃饭
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          class="cxd-Form-item cxd-Form-item--normal"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField"
              >
                <span>
                  您吃了吗
                </span>
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-static"
          >
            <div
              class="cxd-Form-control"
            >
              <span
                class="cxd-PlainField"
              >
                吃了
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
